samples/_failures_safe/1761448787_2a799e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_149c49c6.c: In function ‘main’:
./samples/SAFE/__tmp_149c49c6.c:138:10: error: ‘heap’ undeclared (first use in this function)
  138 |     free(heap
      |          ^~~~
./samples/SAFE/__tmp_149c49c6.c:138:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_149c49c6.c:138:14: error: expected ‘)’ at end of input
  138 |     free(heap
      |         ~    ^
      |              )
./samples/SAFE/__tmp_149c49c6.c:138:5: error: expected declaration or statement at end of input
  138 |     free(heap
      |     ^~~~
